# ossum.tech

./: .gitignore  404.html  CLAUDE.md  CNAME  NOTEBOOK.md  README.md  build.sbt  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yaml
MCP/: claude-code.html  claude-desktop.html  gemini.html  github-copilot.html  index.html  intellij-ai.html  intellij-junie.html  vscode-copilot.html
OSS/: authoring-riddl.html  index.html
OSS/intellij-plugin/: index.html
OSS/vscode-extension/: index.html
about/: index.html  privacy-policy.html
about/privacy-policy/: index.html
coming-soon/: index.html
docify/: index.html
docs/: index.md
docs/MCP/: claude-code.md  claude-desktop.md  gemini.md  github-copilot.md  index.md  intellij-ai.md  intellij-junie.md  vscode-copilot.md
docs/OSS/: authoring-riddl.md  index.md
docs/about/: index.md  privacy-policy.md
docs/coming-soon/: index.md
docs/docify/: index.md
docs/riddl/: index.md  quickstart.md
docs/stylesheets/: extra.css
docs/synapify/: generation.md  index.md  simulation.md  user-interface.md
docs/verify/: index.md
overrides/: .placeholder  main.html
overrides/partials/: logo.html
project/: ExtractEbnf.scala  plugins.sbt
riddl/: index.html  quickstart.html
riddl/concepts/: adaptor.html  (+45 more)
riddl_lexer/: __init__.py  lexer.py  style.py
scripts/: migrate-hugo.py
search/: search_index.js  search_index.json
stylesheets/: extra.css
synapify/: generation.html  index.html  simulation.html  user-interface.html
tools/: extract-grammar.sh
verify/: index.html
(+286 files in other folders)
