[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "riddl-pygments-lexer"
version = "1.0.0"
description = "Pygments lexer for RIDDL language syntax highlighting"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Ossum Inc.", email = "support@ossuminc.com"}
]
keywords = ["pygments", "lexer", "riddl", "syntax-highlighting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Filters",
    "Topic :: Text Processing :: Markup",
]
requires-python = ">=3.8"
dependencies = [
    "pygments>=2.0",
]

[project.entry-points."pygments.lexers"]
riddl = "riddl_lexer:RiddlLexer"

[project.entry-points."pygments.styles"]
riddl = "riddl_lexer:RiddlStyle"

[project.urls]
Homepage = "https://ossum.tech"
Repository = "https://github.com/ossuminc/ossum.tech"

[tool.setuptools.packages.find]
where = ["."]
include = ["riddl_lexer*"]